name:                colloque
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/smorele/colloque#readme
license:             BSD3
license-file:        LICENSE
author:              smorele
maintainer:          sebastien.morele@gmail.com
copyright:           value
category:            POC
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Colloque
  build-depends:       base >= 4.7 && < 5
                      , random-shuffle
  default-language:    Haskell2010

executable colloque-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , colloque
                     , random-shuffle
                   
  default-language:    Haskell2010

test-suite colloque-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , colloque
                     , random-shuffle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smorele/colloque
